Primera versión del servicio interno
Se ha añadido la primera versión del servicio interno, para notificar a los usuarios por mail ante diversas acciones. Esta versión puede tener algún fallo ya que no ha sido comprobada en su totalidad.